[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Asteroid.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/SplitAsteroid.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/ScreenShake.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Spaceship_w_Robots.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/HUD.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/Game_Modes/Meteor_Shower.gd" type="Script" id=6]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 839.586, -38.1318, 0, 0, 0, 0, 404.447, -46.1794, 0, 0, 0, 0, 404.447, -44.7403, 0, 0, 0, 0, 382.142, -47.6185, 0, 0, 0, 0, -45.5435, -46.4974, 0, 0, 0, 0, -32.2933, 796.215, 0, 0, 0, 0, 410.652, 789.365, 0, 0, 0, 0, 844.232, 787.649, 0, 0, 0, 0, 855.469, 364.259, 0, 0, 0, 0, 839.569, -33.2472 )
}

[node name="Meteor_Shower" type="Node2D"]
script = ExtResource( 6 )
asteroid = ExtResource( 1 )
split_asteroid = ExtResource( 2 )
min_border_of_ast = 1
max_border_of_ast = 4

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
current = true

[node name="ScreenShake" parent="Camera2D" instance=ExtResource( 3 )]

[node name="Spaceship_w_Robots" parent="." instance=ExtResource( 4 )]

[node name="StartGame_Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true
autostart = true

[node name="Pitfalls" type="Node" parent="."]

[node name="Pitfalls_Path" type="Path2D" parent="Pitfalls"]
position = Vector2( 2.0407, 6.30305 )
scale = Vector2( 0.790568, 0.834474 )
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Pitfalls/Pitfalls_Path"]
position = Vector2( 839.586, -38.1318 )
rotation = -3.1231

[node name="Asteroid" type="Node" parent="Pitfalls"]

[node name="Asteroid_Container" type="Node" parent="Pitfalls/Asteroid"]

[node name="Asteroid_Timer" type="Timer" parent="Pitfalls/Asteroid"]
wait_time = 1.5

[node name="HUD" parent="." instance=ExtResource( 5 )]
layer = 5

[node name="Crate_Container" type="Node" parent="."]

[node name="Mine_Container" type="Node" parent="."]
[connection signal="timeout" from="StartGame_Timer" to="." method="_on_StartGame_Timer_timeout"]
[connection signal="timeout" from="Pitfalls/Asteroid/Asteroid_Timer" to="." method="_on_Asteroid_Timer_timeout"]
